--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -9,10 +9,15 @@
     padding: 0;
 }
 
+.container {
+    width: 1140px;
+    margin: 0 auto;
+}
 
-
+@import 'blocks/btns';
 @import 'blocks/promo';
 @import 'blocks/title';
-@import 'blocks/button';
 @import 'blocks/sidepanel';
 @import 'blocks/menu';
+
+
