--- a/src/sass/blocks/_menu.scss
+++ b/src/sass/blocks/_menu.scss
@@ -20,5 +20,82 @@
 }
 
 .menu {
-    
+    position: fixed;
+    top: 0;
+    z-index: 10;
+    height: 100vh;
+    left: -100%;
+    visibility: hidden;
+    transition: all .2s;
+    &_active {
+        left: 0;
+        opacity: 1;
+        visibility: visible;
+    }
+    &__block {
+        position: relative;
+        width: 345px;
+        height: 100%;
+        background-color: $main-color;
+        padding-left: 50px;
+    }
+    &__close {
+        position: absolute;
+        top: 25px;
+        right: 25px;
+        cursor: pointer;
+    }
+    &__list {
+        position: absolute;
+        margin-top: 140px;
+        list-style-type: none;
+
+    }
+    &__link  {
+        margin-bottom: 15px;
+        font-weight: 700;
+        font-size: 24px;
+        line-height: 36px;
+        a {
+            color: #fff;
+            text-decoration: none;
+        }
+        &:before {
+            content: '';
+            position: absolute;
+            left: -30px;
+            margin-top: 10px;
+            width: 15px;
+            height: 15px;
+            border: 1px solid #000000;
+            border-radius: 100%;
+            transition: all .5s;
+        }
+        &:hover {
+            &:before {
+                background-color: red;
+            }
+        }
+    }
+    &__social {
+        width: 90px;
+        position: absolute;
+        bottom: 50px;
+        left: 50%;
+        transform: translate(-50%);
+        display: flex;
+        justify-content: space-between;
+        align-content: center;
+    }
+
+    &__overlay {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: #fff;
+        opacity: 70%;
+        z-index: -2;
+    }
 }
